--- a/cookbooks/apache2/templates/index.html.erb
+++ b/cookbooks/apache2/templates/index.html.erb
@@ -9,5 +9,7 @@
 This server has total <%= node["memory"]["total"].to_i/1024 %> MB Memory.
 </p>
 <p> and <%= node["memory"]["free"].to_i/1024%> MB is free now    </p>
+
+<p>This is version 0.2.0 of the apache cookbook</p>
 </body>
 </html>
